--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://i.ibb.co/qMgPmw8/image.png"
+    />
+    <meta property="og:image" content="https://i.ibb.co/qMgPmw8/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Panties- 2ndTry</title>
   </head>
